2016-03-18 belangeo <belangeo@gmail.com>

    *  Added new object: MoogLP, 24dB/oct resonant lowpass filter.

2016-03-16 belangeo <belangeo@gmail.com>

    *  Added new object: ChenLee, another chaotic attractor based on the Chen-Lee system.

2016-03-16 belangeo <belangeo@gmail.com>

    *  Added new object: PadSynthTable, a beautiful algorithm from Nasca Octavian Paul.

2016-03-13 belangeo <belangeo@gmail.com>

    *  Added rotate and copyData methods to the PyoTableObject.

2016-03-12 belangeo <belangeo@gmail.com>

    *  Fixed TableWrite writing pointer in the table. Added a mode attribute
    to select between normalized (0->1) or raw (samples) position.

2016-03-01 belangeo <belangeo@gmail.com>

    * Final revision for version 0.7.9.
    - SHA: 7ddbeacd14cd78ce4930c845a82745bb58f4a26c

2016-03-01 belangeo <belangeo@gmail.com>

    *  Upgraded version number to 0.7.9.

2016-03-01 belangeo <belangeo@gmail.com>

    *  Pyo now uses its own PRNG to avoid conflicts with other libs or 
    modules that use rand()/srand() in the same process. This fixed the 
    Server's global seed behaviour.

2016-02-29 belangeo <belangeo@gmail.com>

    * Fixed a bug, introduced by unicode addresses handler, in Open Sound 
    Control objects.

2016-02-29 belangeo <belangeo@gmail.com>

    * Exposed internal GUI widgets in the official API. New objects are
    PyoGuiControlSlider, PyoGuiVuMeter, PyoGuiGrapher, PyoGuiMultiSlider,
    PyoGuiSpectrum, PyoGuiScope and PyoGuiSndView.

2016-02-17 belangeo <belangeo@gmail.com>

    * E-Pyo: Added a warning before quitting the application.

2016-02-12 belangeo <belangeo@gmail.com>

    * Fixed a bug in Notein voice assignation.

2016-02-12 belangeo <belangeo@gmail.com>

    * Added readyToDetect() method to AttackDetector object.

2016-01-29 belangeo <belangeo@gmail.com>

    * Fixed segfault in Server dealloc function.

2016-01-08 belangeo <belangeo@gmail.com>

    * Final revision for version 0.7.8.